design自适应版底部导航栏

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">BottomNavigations</string>
+
+    <string name="menu_one">One</string>
+    <string name="menu_two">Two</string>
+    <string name="menu_three">Three</string>
 </resources>
